# array

./: CMakeLists.txt
inc/ensemble/: array.hpp
src/ensemble/: array.cpp
test/: main.cpp
